# project

./: .env.example  .gitignore  ARCHITECTURE.md  CATEGORY_AUDIT.md  CLAUDE.md  EXPERIENCE_AUDIT.md  FOUNDATION_FACTS.md  IDENTITY_ROLLOUT.md  OPERATIONS.md  PUBLISHING_SPEC.md  README.md  README_DRIFT.md  REASONING_MANIFEST.md  RECONCILIATION_LOG.md  V1_BACKLOG.md  backtest_results.json  efficient_backtest.py  methodology.md  methodology_drift.md  package-lock.json  pyproject.toml  settings.yaml  triggers.py
.design-sync/: NOTES.md  config.json
config/: README.md  avantis_models.json  drift.yaml  settings.yaml  slow.yaml
docs/: Architecture_Register.md  CPA_Technical_Brief.md  Compliance_Disclosure_Changes.md  Content_Hierarchy.md  DESIGN_multigame.md  Driftwood_Canon.md  Editorial_Style_Guide.md  Evidence_Register.md  FIP_Validation_Results.md  GTM_Findings.md  GTM_Next_Actions.md  GTM_Playbook.md  GTM_Scripts.md  Idea_Pipeline.md  Investment_Writing_Principles.md  SEASON_LEDGER.md  STAGED_ESSAYS_NOTE.md  Structural_Alpha_Methodology.md  Tilt_Validation_Results.md  _provenance.json  _tmpca.html  about.html  alabama-tax.html  alaska-tax.html  alert_state.json  arizona-tax.html  arkansas-tax.html  awor.html  backtest.json  batch.json  board.json  california-tax.html  capital-allocation.html  case-business-sale.html  case-charitable-giving.html  case-inheritance.html  case-moving-states.html  case-rmds.html  case-stock-options.html  case-vacation-home.html  (+106 more)
outreach/: COI_PLAYBOOK.md  COI_targets_western_springs.csv  GATED_PDF_SPEC.md  TOUCH2_EMAILS.md
(+569 files in other folders)
