[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrbet"
version = "0.1.0"
description = "Mean-reversion live betting signal system for NBA totals and team totals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mrbet" }]
dependencies = [
    "requests>=2.31",
    "pydantic>=2.5",
    "numpy>=1.26",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
desktop = ["plyer>=2.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
shots = ["playwright>=1.40"]   # visual-QA harness (scripts/shots.py); also needs `playwright install chromium`

[project.scripts]
mrbet = "mrbet.cli:app"
drift = "drift.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mrbet = ["web/*.html"]
drift = ["web/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
